CRUD Categorias funcional
